--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -10,38 +10,41 @@
 <body>
     
     <div class="container">
-        <img class="black" src="/img/black.png">
+        <div class="overlay">
+
+        </div>
         <img class="background" src="/img/background.png" alt="background">
 
         <div class="todo-task">
             <h1>T O D O</h1>
             <div class="todo-add-task">
-                <input type="text" placeholder="Enter your task">
-                <button>Add</button>
+                <input id="input-box" type="text" placeholder="Enter your task">
+                <button onclick="addTask()">Add</button>
             </div>
-            <div class="task-list">
+            <div class="list-wrapper">
                 <ul id="list-container">
-                    <li class="checked">first task added</li>
-                    <li>second task added</li>
-                    <li>taki taki rumba ggs bvaroo aaba k garnu hoal Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quae voluptatum explicabo sunt consequuntur reiciendis enim molestiae vero eum esse voluptas aliquid consequatur, quasi dolor earum aspernatur! Asperiores, fugit dolor?</li>
+                    <!-- <li class="checked">first task added</li>
+                    <li>second task added</li> -->
+                    <!-- <li>taki taki rumba ggs bvaroo aaba k garnu hoal Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quae voluptatum explicabo sunt consequuntur reiciendis enim molestiae vero eum esse voluptas aliquid consequatur, quasi dolor earum aspernatur! Asperiores, fugit dolor?</li> -->
                 </ul>
-            </div>
-            <div class="foot">
-                <div class="items-left">
-                    <p>5 items left</p>
-                </div>
-                <div class="status">
-                    <span>All</span>
-                    <span>Active</span>
-                    <span>Completed</span>
-                </div>
-                <div class="clear-completed">
-                    <span>Clear Completed</span>
+                <div class="foot">
+                    <div class="items-left">
+                        <p>5 items left</p>
+                    </div>
+                    <div class="status">
+                        <span>All</span>
+                        <span>Active</span>
+                        <span>Completed</span>
+                    </div>
+                    <div class="clear-completed">
+                        <span>Clear Completed</span>
 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
 </body>
+<script src="script.js"></script>
 </html>
