--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/385dffd57a.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Some tags are vital for SEO. Others have little or no impact on rankings."/>
@@ -28,9 +29,9 @@
                     <!-- <li>taki taki rumba ggs bvaroo aaba k garnu hoal Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quae voluptatum explicabo sunt consequuntur reiciendis enim molestiae vero eum esse voluptas aliquid consequatur, quasi dolor earum aspernatur! Asperiores, fugit dolor?</li> -->
                 </ul>
                 <div class="foot">
-                    <div class="items-left">
-                        <p>5 items left</p>
-                    </div>
+                    <span id="items-left">
+                        <!-- <p>0 items left</p> -->
+                    </span>
                     <div class="status">
                         <span>All</span>
                         <span>Active</span>
